# git2py

./: README.md  migration.sh  setup.cfg
.github/workflows/: ci.yml
docsrc/: index.rst
git2py/: __init__.py  gitlab.py  migration.py
