[metadata]
name = git2py
version = 0.0.3
url = https://github.com/i2mint/git2py
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = Mapping git operation to a dict-like Data Object Layer
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = git2py

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	py2store

